@@ -10,6 +10,10 @@ What's New in Python 2.6 beta 2?
 Core and Builtins
 -----------------
 
+- Issue #3088: Corrected a race condition in classes derived from
+  threading.local: the first member set by a thread could be saved in
+  another thread's dictionary.
+
 - Issue #3004: Minor change to slice.indices(): the start and stop
   arguments are now treated identically, making the behaviour easier
   to describe and understand.  For example, slice(None, -10,
